--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@ember/optional-features": "^0.6.3",
+    "@html-next/vertical-collection": "^1.0.0",
     "broccoli-asset-rev": "^2.7.0",
     "ember-auto-import": "^1.2.21",
     "ember-cli": "~3.8.1",
@@ -84,6 +85,9 @@
     "qunit-dom": "^0.8.0",
     "sinon": "^7.3.1",
     "sinon-chai": "^3.3.0"
+  },
+  "peerDependencies": {
+    "@html-next/vertical-collection": "^1.0.0"
   },
   "engines": {
     "node": "8.* || >= 10.*"
